[package]
name = "slicer-toolbox-cmd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
csv = "1.3.1"
rfd = { version = "0.15.2" }
walkdir = "2.5.0"
serde_json = "1.0.137"
slicer-toolbox-core = { path = "../slicer-toolbox-core"}
compress-tools = "0.15.1"
icu_collator = "2.0.0-beta1"
merge-whitespace-utils = "1.1.0"
dont_disappear = "3.0.1"