[package]
name = "slicer-toolbox-cmd"
version = "1.0.2"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
csv = "1.3.1"
rfd = { version = "0.15.2" }
walkdir = "2.5.0"
slicer-toolbox-core = { path = "../slicer-toolbox-core"}
compress-tools = "0.15.1"
icu_collator = "2.0.0-beta1"
merge-whitespace-utils = "1.1.0"
dont_disappear = "3.0.1"
itertools = "0.14.0"